*
* 1.2.9
*

- User-defined constants in NXSL
- New NXSL functions: chr, ord
- Added MIBs for Nortel/Trapeze Wireless security switches
- New MIBs: SUN-PLATFORM-MIB
- Fixed issues: #202, #300, #305, #325


*
* 1.2.8
*

- Support for data collection using SM-CLP protocol
- Aggregated DCI values on cluster objects
- Transformation scripts for table DCIs
- Support for multi-column keys (instances) in table DCIs
- Implemented SNMP table DCIs
- Configurable DCI summary tables
- Default background color for new network maps made configurable
- Logged in users cannot be deleted
- Empty containters have "Normal" status instead of "Unknown"
- New NXSL functions: AgentReadTable, DeleteObject, GetDCIRawValue
- Map objects can have status calculated from contained objects' status
- SNMP trap listener port now configurable
- HP-UX agent improved
- Some D-Link MIBs added to distribution
- Debian binaries built in UNICODE mode
- Management console:
	- Simplified table DCI configuration
	- Charts can be created from table data
	- Severity filter in dashboard element "Alarm Viewer"
	- Zoom level can be configured for "Network Map" dashboard elements
	- Values of custom attributes can be used in object tools
	- Vertical orientation for dial chart elements
- Web UI:
	- Single sign-on support using CAS
	- Configuration file nxmc.properties can be placed outside of war file
	- Workbench layout and user preferences saved between sessions
- Fixed issues: #57, #58, #195, #198, #262, #277, #281, #284, #286, #291, #293


*
* 1.2.7
*

- Simplified configuration of DCIs based on Windows performance counters
- Basic software inventory
- Network discovery improved
- Status of zone's proxy node now used in "node down" event correlation
- Configurable default DCI retention time and polling interval
- New NXSL functions: CreateNode, GetSumDCIValue
- New NXSL operator @ - safe get object's attribute
- New MIBs added: ASTARO-MIB, CPQHOST-MIB, CPQPOWER-MIB
- Special support for wireless switches